welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (da=db) {return 0}
              ^