welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	var da=Math.abs(10-a)
	var db=Math.abs(10-b)
	if (da=db) {return 0}
	if (da>db) {return b}
		else {return a}
}
